--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,32 @@
 # dummy data
 dummyData.ts
 
+# server
+*.log
+.DS_Store
+.env
+.env.backup
+.env.production
+.phpactor.json
+.phpunit.result.cache
+.fleet
+.idea
+.nova
+.phpunit.cache
+.vscode
+.zed
+auth.json
+node_modules
+public/build
+public/hot
+public/storage
+storage/*.key
+storage/pail
+vendor
+Homestead.json
+Homestead.yaml
+Thumbs.db
+
 # dependencies
 node_modules
 .pnp
